<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Manga Vega</string>
  <string name="hello_world">Hello world!</string>
  <string name="refresh">Refresh</string>
  <string name="title_activity_manga_chapter">MangaChapterActivity</string>
  <string name="title_activity_manga_page">MangaPageActivity</string>

  <string name="choose_file">Choose Your Manga File(.zip)</string>
  <string name="setting_source">Sources</string>
  <string name="setting_folder_size">Cache File Size</string>
  <string name="last_page">Last Page</string>
  <string name="last_page_again">Fling Again To Next Chapter</string>
  <string name="first_page">First Page</string>
  <string name="first_page_again">Fling Again To Prev Chapter</string>
  <string name="reading_direction">Reading Direction\t\t\t</string>
  <string name="split_page">Auto Split Page\t\t\t</string>
  <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
  <string name="menu_main_setting_title">Mange Source</string>
  <!--Menu-->
  <string name="nav_latest_update">Latest</string>
  <string name="nav_all_manga">All</string>
  <string name="nav_local">Local</string>
  <string name="nav_favourite">Favourite</string>
  <string name="nav_history">History</string>
  <string name="nav_setting">Settings</string>

  <!-- Nav Drawer Menu Items -->
  <string-array name="nav_drawer_items">
    <item>@string/nav_favourite</item>
    <item>@string/nav_latest_update</item>
    <item>@string/nav_all_manga</item>
    <item>@string/nav_history</item>
    <item>@string/nav_local</item>
    <item>@string/nav_setting</item>
  </string-array>

  <!-- Nav Drawer List Item Icons -->
  <!-- Keep them in order as the titles are in -->
  <array name="nav_drawer_icons">
    <item>@mipmap/ic_alarm_on_white</item>
    <item>@mipmap/ic_storage_white</item>
    <item>@mipmap/ic_star_white</item>
    <item>@mipmap/ic_history_white</item>
    <item>@mipmap/ic_folder_open_white</item>
    <item>@mipmap/ic_settings</item>
  </array>

  <string name="action_settings">Settings</string>
  <string name="favourited">Favourited</string>
  <string name="unfavourited">Unfavourited</string>
  <string name="do_you_want_to_delete">Are you Sure You Want To Delete This Item ?</string>
  <string name="deleting_dialog_title">Deleting Item</string>
  <string name="yes">YES</string>
  <string name="no">NO</string>
  <string name="local_current_path">Current Path</string>
  <string name="local_set_default_path">Set Default</string>
  <string name="local_set_default_path_successed">Set Default Path Success</string>
  <string name="no_more_prev_chapter">No Previous Chapter</string>
  <string name="no_more_next_chapter">No Next Chapter</string>
  <string name="favourite_no_favourite_manga">No Favourite Manga</string>
  <string name="history_no_history_manga">No History</string>
  <string name="setting_msg_cache_cleared">Cache Files Cleared</string>

  <!--Preference-->
  <string name="pref_key_version_name">pref_key_version_name</string>
  <string name="pref_key_setting_storage_size">pref_key_setting_storage_size</string>
  <string name="pref_key_contact_us">pref_key_contact_us</string>
  <string name="pref_key_rate">pref_key_rate</string>
  <string name="pref_key_manga_sources">pref_key_manga_sources</string>
  <string name="pref_key_split_page">pref_key_split_page</string>
  <string name="pref_key_auto_update_service">pref_key_auto_update_service</string>
  <string name="pref_key_default_path">pref_key_default_path</string>
  <string name="pref_key_auto_update_hours">pref_key_auto_update_hours</string>
  <string name="pref_key_is_ltr">pref_key_is_ltr</string>

  <string name="pref_category_general">General</string>
  <string name="pref_category_reading">Reading</string>
  <string name="pref_category_system">System</string>

  <string name="pref_summary_split_page">Auto Split Page Into Two Part</string>
  <string name="pref_summary_auto_update_service">Notify When Favourite Manga Updated</string>

  <string name="pref_title_contact_us">Contact Us</string>
  <string name="pref_title_setting_storage_size">Clear Cache Files</string>
  <string name="pref_title_rate">Rate Me</string>
  <string name="pref_title_version">Version</string>
  <string name="pref_title_auto_update_hours">Check Update Period</string>


  <string name="pref_title_auto_update_service">Notification</string>
  <string name="pref_dialog_message_clear_cache">Are you sure to clear all the cache files?</string>
  <string name="pref_data_rate_me">http://google.com</string>
  <string name="pref_data_contact_us">mailto:mangaviewer2015@gmail.com?subject=About Suggestion</string>
  <string name="pref_data_contact_us_email_text">About MangaViewer</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="msg_loading">Loading...</string>
  <string name="title_loading">Loading</string>
  <string name="msg_tap_two_to_exit">Tap Back Again To Exit App</string>
  <string name="prefix_chapter_title">Chapter</string>
  <string name="msg_page_no_page">No Page In This Chapter, Please Try Again.</string>
  <string name="msg_notify_updated_service_title">Favorite manga updated</string>
  <string name="msg_notify_updated_service_text">Check the updated manga</string>

  <string name="msg_start_auto_update_service">Started Notify Service</string>
  <string name="msg_stop_auto_update_service">Stopped Notify Service</string>
  <string name="pref_summary_contact_us">Tell Us What You Want</string>
  <string name="menu_title_clear">Clear</string>
  <string name="msg_history_dialog_title">Clear</string>
  <string name="msg_history_dialog_message">Are you sure to clear all the histories?</string>
  <string name="button_tooltip_prev_chapter">Prev Chapter</string>
  <string name="button_tooltip_next_chapter">Next Chapter</string>
  <string name="channel_name">Notification</string>
  <string name="channel_description">Notify updated manga</string>
  <string name="chapter_last_read">Last read</string>
  <string name="chapter_list">Chapters</string>
  <string name="oops_error_message">Oops, something went wrong.</string>
  <string name="retry">Retry</string>
  <string name="delete">Delete</string>
  <string name="cancel">Cancel</string>
  <string name="clear">Clear</string>
  <string name="no_description">No decription</string>
  <string name="load_page_fail_message">Load image failed</string>
  <string name="pull_to_next_chapter">Pull to next chapter</string>
  <string name="pull_to_prev_chapter">Pull to previous chapter</string>
  <string name="next_chapter">Next chapter</string>
  <string name="prev_chapter">Previous chapter</string>
  <string name="release_to_prev_chapter">Release to go</string>
  <string name="release_to_next_chapter">Release to go</string>
  <string name="page_setting_brightness">Brightness</string>
  <string name="page_setting_chapters">Chapters</string>
  <string name="page_setting_rotation">Rotation</string>
  <string name="page_setting_direction">Direction</string>
  <string name="loading_chapter">Loading Chapter</string>
  <string name="continue_read">Continue</string>
  <string name="undo">Undo</string>
  <string name="history_item_removed">%s removed</string>
  <string name="download">Download</string>
  <string name="chapter_start_download">Download</string>
  <string name="no_local_manga">No Local Manga</string>
  <string name="add">Add</string>
  <string name="choose_folder">Choose manga folder</string>
  <string name="bottom_sheet_button_remove">Remove</string>
  <string name="manga_updated_count">%d manga updated</string>
  <string name="page_indicator">%d / %d</string>
  <string name="page_indicator_invalid">- / -</string>

  <plurals name="item_selected">
    <item quantity="one">%d item selected</item>
    <item quantity="other">%d items selected</item>
  </plurals>


</resources>
