<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/pref_catagory_general">
        <!--Contact Us-->
        <Preference
            android:key="@string/pref_key_contact_us"
            android:title="@string/pref_title_contact_us"
            android:summary="@string/pref_summary_contact_us">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_data_contact_us">
                <extra
                    android:name="android.intent.extra.TEXT"
                    android:value="@string/pref_data_contact_us_email_text"/>
            </intent>
        </Preference>
        <!--Rate-->
        <!--<Preference-->
            <!--android:key="@string/pref_key_rate"-->
            <!--android:title="@string/pref_title_rate">-->
            <!--<intent-->
                <!--android:action="android.intent.action.VIEW"-->
                <!--android:data="@string/pref_data_rate_me"></intent>-->
        <!--</Preference>-->

        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
            android:defaultValue="0"
            android:key="@string/pref_key_manga_sources"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_manga_sources"/>

        <SwitchPreference
            android:key="@string/pref_key_split_page"
            android:defaultValue="true"
            android:summary="@string/pref_summary_split_page"
            android:title="@string/split_page"
            >

        </SwitchPreference>

        <SwitchPreference
            android:key="@string/pref_key_auto_update_service"
            android:defaultValue="true"
            android:summary="@string/pref_summary_auto_update_service"
            android:title="@string/pref_title_auto_update_service"
            ></SwitchPreference>
        <ListPreference
            android:defaultValue="6"
            android:entries="@array/pref_entries_update_hour"
            android:entryValues="@array/pref_entryValues_update_hour"
            android:key="@string/pref_key_auto_update_hours"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_auto_update_hours"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_catagory_system">

        <Preference android:title="@string/pref_title_version"/>

        <com.king.mangaviewer.preference.MangaViewerDialogPreference
            android:key="@string/pref_key_setting_storage_size"
            android:title="@string/pref_title_setting_storage_size"
            android:dialogMessage="@string/pref_dialog_message_clear_cache"
            />
    </PreferenceCategory>
</PreferenceScreen>
