<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

  <android.support.design.widget.AppBarLayout
      android:id="@+id/appBarLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:elevation="8dp"
      android:translationZ="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >
    <android.support.v7.widget.Toolbar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        />
  </android.support.design.widget.AppBarLayout>

  <android.support.constraint.ConstraintLayout
      android:id="@+id/fullscreen_content_controls"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal|bottom"
      android:background="@color/background_control_panel"
      android:orientation="horizontal"
      android:paddingLeft="4dp"
      android:paddingRight="4dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      tools:ignore="UselessParent"
      >


    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:mirrorForRtl="false"
        android:progressBackgroundTint="@color/lightGrey"
        android:splitTrack="false"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/frButton"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/textView_pageNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="---/---"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="999 / 999 "
        />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/frButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/button_tooltip_prev_chapter"
        app:layout_constraintBottom_toBottomOf="@+id/ffButton"
        app:layout_constraintEnd_toStartOf="@+id/ffButton"
        app:srcCompat="@mipmap/ic_fast_rewind_white"
        style="@style/AppTheme.PlainFab"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/ffButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/button_tooltip_next_chapter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@mipmap/ic_fast_forward_white"
        style="@style/AppTheme.PlainFab"

        />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabChapters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginTop="24dp"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/textView_pageNum"
        app:layout_constraintEnd_toStartOf="@+id/fabBrightness"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_chapter"
        style="@style/AppTheme.PlainFab"
        />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabBrightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/fabChapters"
        app:layout_constraintEnd_toStartOf="@+id/fabDirection"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fabChapters"
        app:layout_constraintTop_toTopOf="@+id/fabChapters"
        app:srcCompat="@drawable/ic_brightness"
        style="@style/AppTheme.PlainFab"
        />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/fabChapters"
        app:layout_constraintEnd_toStartOf="@+id/fabRotation"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fabBrightness"
        app:layout_constraintTop_toTopOf="@+id/fabChapters"
        app:srcCompat="@drawable/ic_reading_ltr"
        style="@style/AppTheme.PlainFab"
        />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabRotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/fabChapters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fabDirection"
        app:layout_constraintTop_toTopOf="@+id/fabChapters"
        app:srcCompat="@drawable/ic_rotation"
        style="@style/AppTheme.PlainFab"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/page_setting_chapters"
        app:layout_constraintEnd_toEndOf="@+id/fabChapters"
        app:layout_constraintStart_toStartOf="@+id/fabChapters"
        app:layout_constraintTop_toBottomOf="@+id/fabChapters"
        style="@style/PlainFabText"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/page_setting_brightness"
        app:layout_constraintEnd_toEndOf="@+id/fabBrightness"
        app:layout_constraintStart_toStartOf="@+id/fabBrightness"
        app:layout_constraintTop_toBottomOf="@+id/fabBrightness"
        style="@style/PlainFabText"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/page_setting_direction"
        app:layout_constraintEnd_toEndOf="@+id/fabDirection"
        app:layout_constraintStart_toStartOf="@+id/fabDirection"
        app:layout_constraintTop_toBottomOf="@+id/fabDirection"
        style="@style/PlainFabText"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/page_setting_rotation"
        app:layout_constraintEnd_toEndOf="@+id/fabRotation"
        app:layout_constraintStart_toStartOf="@+id/fabRotation"
        app:layout_constraintTop_toBottomOf="@+id/fabRotation"
        style="@style/PlainFabText"
        />
  </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
